message ContentMessage {
  optional string checksum = 1;
  optional  int32 size = 2;
  optional string first_appearance_time = 3;
}

message ContentInstanceMessage {
  optional string checksum = 1;
  optional int32 size = 2;
  optional string server_name = 3;
  optional string device = 4;
  optional string full_path = 5;
  optional string modification_time = 6;
}

message ContentDataMessage {
    message HashEntry {
        message HashValue {
            //enum Type {CONTENT = 1; ContentInstance = 2;}
            //optional Type type = 1;
            optional ContentMessage content = 2;
            optional ContentInstanceMessage instance = 3;
        }
        optional string key = 1;
        optional HashValue value = 2;
    }
    repeated HashEntry contents = 1;
    repeated HashEntry instances = 2;
}
